# ai-swing-trading

./: .gitignore  README.md  main.py  pyproject.toml
src/aist/: main.py  models.py  orchestrator.py
src/aist/agents/: context_agent.py  decision_agent.py  technical_agent.py
src/aist/notebooks/: utility_functions.ipynb
src/aist/quant_momentum/: data.py  indicators.py  signals.py
src/aist/rag/: retriever.py  summarizer.py
src/aist/rag/v1/: embeddings.py  ingestion.py  retriever.py  summarizer.py  vector_store.py
src/aist/rag/v2/: embedder.py  news_loader.py  retriever.py  summarizer.py  vector_store.py
