[project]
name = "ai-swing-trading"
version = "0.1.0"
description = "AI Swing Trading Platform"
readme = "README.md"
requires-python = ">=3.11,<3.13"  # faiss-cpu 1.7.x supports up to Python 3.11
dependencies = [
    "fastapi",
    "uvicorn",
    "pandas",
    "numpy>=1.21,<2.0",  # faiss-cpu 1.7.x requires numpy 1.x
    "yfinance",
    "pydantic",
    "sentence-transformers",
    "torch>=2.0.0,<2.1",  # PyTorch 2.0.x has macOS x86_64 wheels
    "faiss-cpu>=1.7.0,<1.8",  # FAISS 1.7.x has macOS x86_64 wheels,
    "IPython",
]

[project.optional-dependencies]
# Add these later when we build Layer 2 (RAG)
rag = [
    "openai>=1.0",
    "pinecone-client>=3.0",
    "langchain>=0.1",
    "langchain-openai>=0.0.5",
]

# Add these later when we build Layer 3 (Agents)
agents = [
    "crewai>=0.1",
    "langgraph>=0.0.10",
]

# Development tools (nice to have)
dev = [
    "pytest>=7.4",
    "black>=24.1",
    "ruff>=0.1",
    "mypy>=1.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# This tells Python where your package lives (src layout)
packages = ["src/aist"]
